# Agentics

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  liquidity_agent_simulate.ipynb  mkdocs.yml  pyproject.toml
.github/workflows/: pypi.yaml  tests.yaml
agentics_class/tutorials/: lesson1.ipynb  lesson2.ipynb  lesson4.ipynb
agentics_class/tutorials/data/: movies_copy.csv
applications/data_wrangling/: data_wrangling.py  utils.py
applications/schema_matching/: README.md  schema_matching.py  schema_matching_agentics.py  utils.py
applications/smart_spreadsheet/: smart_spreadsheet_ui.py
applications/text2sql/: README.md  db.py  demo.py  text2sql.py  utils.py
data/categorization_example/: movies.csv
data/data_wrangling/: buy_test_with_fewshots__k=0.csv  buy_test_with_fewshots__k=1.csv  buy_test_with_fewshots__k=2.csv  restaurant_test_with_fewshots__k=0.csv  restaurant_test_with_fewshots__k=1.csv  restaurant_test_with_fewshots__k=2.csv
data/emotion_detection/: The_Brothers_Karamazov.txt
data/schema_matching/: gpt-oss__AdCO__1to1.jsonl  ground_truth_id_matches.jsonl  ground_truth_schema_matches.jsonl  mimic_attributes.jsonl  mimic_schema.jsonl  minic_attributes.jsonl  omop_attributes.jsonl  omop_schema.jsonl
docs/: agentics.md  background.md  getting_started.md  index.md  transduction.md  use_cases.md
examples/: agentics_web_search_report.py  climate.py  conversational_agent.py  crew_ai_web_search_report.py  emotion_extractor.py  hello_world.py  self_transduction.py
mcp/: DDG_search_tool_mcp.py
src/agentics/: __init__.py
src/agentics/abstractions/: async_executor.py  pydantic_transducer.py  structured_output.py
src/agentics/core/: __init__.py  agentics.py  async_executor.py  atype.py  errors.py  globals.py  llm_connections.py  mapping.py  utils.py
src/agentics/examples/: emotion_extractor.py  hello_world.py  self_transduction.py
src/agentics/ipython/: __init__.py
src/agentics/tools/: tools.py
tests/: conftest.py  test_package.py  test_package_generation.py  test_tutorials.py
tutorials/: agent_with_tool.ipynb  agentics_basics.ipynb  agentics_tutorial.md  amap_reduce.ipynb  atypes.ipynb  conversational_agent.ipynb  lesson3.ipynb  liquidity_agent_2.ipynb  liquidity_agent_3.ipynb  liquidity_agent_v2 copy.ipynb  liquidity_agent_v2.ipynb  liquidity_agent_v3.ipynb  liquidity_data.ipynb  llms.ipynb  mcp_tools.ipynb  subset_fields.ipynb  tests.ipynb  text2sql.ipynb  transduction.ipynb
tutorials/data/: dow_jones.csv  liquidity-test.csv  movies.csv  movies.jsonl  movies_copy.csv  movies_copy.jsonl  movies_with_tweets
